--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "antd": "^5.19.3",
     "autoprefixer": "^10.4.19",
     "react": "^18.3.1",
