--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@tanstack/react-query": "^5.51.21",
     "antd": "^5.19.3",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
